# engine

include/engine/: engine.h  shader.h
include/engine/logging/: log.h
include/engine/math/: mat4.h
include/engine/util/: string.h
shaders/: test.frag  test.vert
src/: CMakeLists.txt
src/engine/: main.c  shader.c
src/engine/logging/: log.c
src/engine/math/: mat4.c
src/engine/util/: string.c
